tests/ui/error-codes/E0596.stderr
error[E0596]: cannot borrow `x` as mutable, as it is not declared as mutable
  --> $DIR/E0596.rs:3:13
   |
LL |     let y = &mut x;
   |             ^^^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL |     let mut x = 1;
   |         +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0596`.
